# stac-data-tools

./: .flake8  .gitignore  404.html  LICENSE  README.md  collection.example.json  collection_spec.md  env.sample  environment.yml  gen_pages.py  index.html  main.py  mkdocs.yml  pull_request_template.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: black.yml  flake8.yml
add item/: index.html
add_item/: index.html
cli/: index.html
command/: index.html
commands/: add item.yml  add_item.yml  create.yml  inject.yml  remove.yml  validate.yml
create/: index.html
data/: cli.yml
docs/: cli.md  command.md  gen_pages.py  index.md  main.html  main.md  main.py  summary.md  test.md  utils.html
docs/commands/: add item.yml  add_item.yml  create.yml  inject.yml  remove.yml  validate.yml
docs/commands_extended/: create.md  inject.md  remove.md  validate.md
docs/src/: index.html  main.html
inject/: index.html
input/: stac_spec.json
mkdocs/: generate_docs.py  mkdocs.yml
remove/: index.html
search/: search_index.json
spec/: collection.example.json  collection.json  collection.md
src/: check_collection.py  cli.py  collection.py  collection_validator.py  config.py  format.py  main.py  spec_validator.py  test.py  utils.py
src/utils/: auth.py  errors.py  logging_config.py  raster.py  spec.py  stac_helpers.py  stac_rest.py  storage.py  url.py
summary/: index.html
validate/: index.html
